[project]
name = "hillclimber"
version = "0.1.5"
description = "Python interfaces for the plumed library with enhanced sampling."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ase>=3.25.0",
    "metadynminer>=0.9.1",
    "molify>=0.2.0",
    "rdkit2ase>=0.1.13",
    "seaborn>=0.13.2",
    "zntrack>=0.8.9",
]
license = { file = "LICENSE" }


[build-system]
requires = [
    "hatchling",
    "Cython>=3.0",
    "setuptools>=65.0",  # For compiling Cython extensions
    "pybind11>=2.11",    # For pycv plugin
    "cmake>=3.15",       # For pycv plugin build
]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "cmake>=4.2.0",
    "cython>=3.2.1",
    "hatchling>=1.27.0",
    "ipykernel>=6.30.1",
    "jax>=0.8.1",
    "pybind11>=3.0.1",
    "pytest>=8.4.1",
]

[project.scripts]
plumed = "plumed:cli"

[project.entry-points.'zntrack.nodes']
hillclimber = 'hillclimber.nodes:nodes'

[project.entry-points.'zntrack.interfaces']
hillclimber = 'hillclimber.interfaces:interfaces'

# Hatchling build configuration
[tool.hatch.build.targets.wheel]
packages = ["src/hillclimber"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
# plumed package is added via force_include in build hook
# to avoid duplicate file warnings

# Custom build hook to compile and bundle PLUMED
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build_plumed.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "build/",
    "src/plumed/_lib/",
    "src/plumed/*.so*",
    # Exclude PLUMED directories not needed for build
    "external/plumed2/regtest/",
    "external/plumed2/user-doc/",
    "external/plumed2/developer-doc/",
    "external/plumed2/new-manual/",
    "external/plumed2/.ci/",
    "external/plumed2/.github/",
    "external/plumed2/astyle/",
    "external/plumed2/macports/",
    "external/plumed2/docker/",
    "external/plumed2/conda/",
    "external/plumed2/CHANGES/",
]

[tool.cibuildwheel.linux]
repair-wheel-command = "export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/project/src/plumed/_lib/lib && auditwheel repair --exclude libplumedKernel.so -w {dest_dir} {wheel}"
